Deployments/gloo_gateway/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gloohttp
  namespace: gloo-system
spec:
  gatewayClassName: gloo-gateway
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gloo-gateway
  namespace: gloo-system
spec:
  selector:
    istio: ingressgateway  # use Istio's jenkins ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "gloo.test.potatohead.live"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gloo
  namespace: gloo-system
spec:
  hosts:
  - "gloo.test.potatohead.live"
  gateways:
  - gloo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: gloohttp
        port:
          number: 8080
